--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,14 @@
       <scope>test</scope>
     </dependency>
 
+      <!-- AI Dependencies -->
+      <dependency>
+          <groupId>org.springframework.ai</groupId>
+          <artifactId>spring-ai-starter-model-openai</artifactId>
+          <version>1.1.0</version>
+      </dependency>
+
+
   </dependencies>
 
   <build>
