--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 # Enable H2 console (optional)
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
-
+spring.ai.openai.api-key=${OPENAI_API_KEY}
